fix(cors): wire CorsConfigurationSource bean to Spring Security with Vercel origin patterns