@@ -1,56 +1,79 @@
 package com.zosh.config;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Primary;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 /**
  * CORS configuration for ShopSphere API.
  *
- * Allowed origins are configurable via environment variable APP_CORS_ALLOWED_ORIGINS.
- * In development: localhost:3000 and localhost:5173 are allowed by default.
- * In production: set APP_CORS_ALLOWED_ORIGINS to your actual frontend domain(s).
+ * Explicitly provides a CorsConfigurationSource bean for Spring Security 6,
+ * as well as a CorsFilter bean.
  *
- * SECURITY NOTE: allowedHeaders uses explicit list instead of wildcard ("*")
- * because using "*" with allowCredentials=true is a security misconfiguration.
+ * Allowed origin patterns include localhost, Vercel deployments (*.vercel.app),
+ * the production Vercel frontend, and any custom origins passed via APP_CORS_ALLOWED_ORIGINS / FRONTEND_URL.
  */
 @Configuration
 public class CorsConfig {
 
-    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173}")
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173,https://*.vercel.app,https://shopsphereecommerceweb.vercel.app}")
     private String allowedOriginsRaw;
 
     @Bean
-    public CorsFilter corsFilter() {
-
+    @Primary
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Parse comma-separated origins from config and trim any surrounding whitespace
-        List<String> allowedOrigins = Arrays.stream(allowedOriginsRaw.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .toList();
-        config.setAllowedOriginPatterns(allowedOrigins);
+        // Safe defaults that are ALWAYS permitted
+        List<String> origins = new ArrayList<>(List.of(
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "http://localhost:5174",
+                "http://127.0.0.1:3000",
+                "http://127.0.0.1:5173",
+                "https://*.vercel.app",
+                "https://shopsphereecommerceweb.vercel.app"
+        ));
+
+        // Add any configured origins from environment variables or application.properties
+        if (allowedOriginsRaw != null && !allowedOriginsRaw.isBlank()) {
+            Arrays.stream(allowedOriginsRaw.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty() && !origins.contains(s))
+                    .forEach(origins::add);
+        }
+
+        config.setAllowedOriginPatterns(origins);
 
         config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
 
-        // Explicit header list — avoids the wildcard+credentials security issue
         config.setAllowedHeaders(Arrays.asList(
                 "Authorization",
                 "Content-Type",
                 "Accept",
                 "X-Requested-With",
                 "Origin",
-                "Cache-Control"));
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers",
+                "Cache-Control",
+                "X-Auth-Token",
+                "x-refresh-token",
+                "Pragma"));
 
-        config.setExposedHeaders(List.of("Authorization"));
+        config.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Set-Cookie",
+                "x-refresh-token"));
 
         config.setAllowCredentials(true);
         config.setMaxAge(3600L); // pre-flight cache for 1 hour
@@ -58,6 +81,11 @@ public class CorsConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
-        return new CorsFilter(source);
+        return source;
+    }
+
+    @Bean
+    public CorsFilter corsFilter() {
+        return new CorsFilter(corsConfigurationSource());
     }
 }
